Latest working version

--- a/mainapp/templates/mainapp/cusdetail.html
+++ b/mainapp/templates/mainapp/cusdetail.html
@@ -6,16 +6,23 @@
 
 {% block body %}
 
-<h3>Name: {{customer.name}}</h3>
-<h3>Owner: {{customer.owner_name}}</h3>
-<h3>Ph.no: {{customer.phone_number}}</h3>
-<h3>VAT: {{customer.vat_number}}</h3>
-<h3>PAN: {{customer.pan_number}}</h3>
-<h3>Description: {{customer.description}}</h3>
-<h3>Total Amount Bought: {{customer.total_amount}}</h3>
-<h3>Credits: {{customer.total_credit}}</h3>
+<div class="container">
 
-{% endblock %}
+    <h3>Name: {{customer.name}}</h3>
+    <h3>Owner: {{customer.owner_name}}</h3>
+    <h3>Ph.no: {{customer.phone_number}}</h3>
+    <h3>VAT: {{customer.vat_number}}</h3>
+    <h3>PAN: {{customer.pan_number}}</h3>
+    <h3>Description: {{customer.description}}</h3>
+    <h3>Total Amount Bought: {{customer.total_amount}}</h3>
+    <h3>Credits: {{customer.total_credit}}</h3>
+    
+    {% for record in customer_buy_records %}
+    <p>{{ record }}</p>
+    {% endfor %}
+</div>
+    
+{% endblock body %}
 
 {% block form %}{% endblock %}
 
