--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -86,8 +86,11 @@
             <a class="nav-link" href="{% url 'getreportbytype' %}" tabindex="-1">Analyze</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        
+        <form action="{% url 'monthreport' %}" method="POST" class="d-flex">
+          {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="enter month number" name="month" value="1" aria-label="Search">
+          <input class="form-control me-2" type="search" placeholder="enter year" name="year" value="2079" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
